// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem applies selected state correctly 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Selected Item
    </span>
  </div>
</div>
`;

exports[`ListItem renders icon, title, subtitle, and right element together 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <span
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="ListItem/ListItem.tsx:68"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  />
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Full Item
    </span>
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Details here
    </span>
  </div>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:82"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <button>
      Action
    </button>
  </div>
</div>
`;

exports[`ListItem renders object subtitle with divider 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Divided
    </span>
    <div
      className="margin-x1ghz6dp padding-x1717udv"
      data-element-src="ListItem/ListItem.tsx:53"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        Left
      </span>
      <div
        className="margin-x1ghz6dp padding-x1717udv"
        data-element-src="ListItem/ListItem.tsx:55"
        data-style-src="react-strict-dom:web/runtime.js"
        style={{}}
      />
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        Right
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem renders title correctly 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      My Item
    </span>
  </div>
</div>
`;

exports[`ListItem renders vertical subtitle layout 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Vertical
    </span>
    <div
      className="margin-x1ghz6dp padding-x1717udv"
      data-element-src="ListItem/ListItem.tsx:44"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        Top
      </span>
      <div
        className="margin-x1ghz6dp padding-x1717udv"
        data-element-src="ListItem/ListItem.tsx:46"
        data-style-src="react-strict-dom:web/runtime.js"
        style={{}}
      />
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        Bottom
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem renders with custom iconSize 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <span
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="ListItem/ListItem.tsx:68"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  />
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Custom Icon Size
    </span>
  </div>
</div>
`;

exports[`ListItem renders with destructive variant 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <span
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="ListItem/ListItem.tsx:68"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  />
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Delete Account
    </span>
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      This action cannot be undone
    </span>
  </div>
</div>
`;

exports[`ListItem renders with icon 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <span
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="ListItem/ListItem.tsx:68"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  />
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      My Item
    </span>
  </div>
</div>
`;

exports[`ListItem renders with iconAlign top 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <span
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="ListItem/ListItem.tsx:68"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  />
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Top Aligned
    </span>
    <div
      className="margin-x1ghz6dp padding-x1717udv"
      data-element-src="ListItem/ListItem.tsx:44"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        Primary
      </span>
      <div
        className="margin-x1ghz6dp padding-x1717udv"
        data-element-src="ListItem/ListItem.tsx:46"
        data-style-src="react-strict-dom:web/runtime.js"
        style={{}}
      />
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        Secondary
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem renders with object subtitle (primary + secondary) 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      My Item
    </span>
    <div
      className="margin-x1ghz6dp padding-x1717udv"
      data-element-src="ListItem/ListItem.tsx:53"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        user@email.com
      </span>
      <div
        className="margin-x1ghz6dp padding-x1717udv"
        data-element-src="ListItem/ListItem.tsx:55"
        data-style-src="react-strict-dom:web/runtime.js"
        style={{}}
      />
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="Text/Text.tsx:31"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        Updated today
      </span>
    </div>
  </div>
</div>
`;

exports[`ListItem renders with right element 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      My Item
    </span>
  </div>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:82"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <button>
      Action
    </button>
  </div>
</div>
`;

exports[`ListItem renders with selectionMode multi 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <button
    aria-checked={false}
    onClick={[Function]}
    role="checkbox"
  />
  <span
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="ListItem/ListItem.tsx:68"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  />
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Selectable Item
    </span>
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      user@example.com
    </span>
  </div>
</div>
`;

exports[`ListItem renders with selectionMode multi and isSelected true 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <button
    aria-checked={true}
    onClick={[Function]}
    role="checkbox"
  />
  <span
    aria-hidden={true}
    className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
    data-element-src="ListItem/ListItem.tsx:68"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  />
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Selected Item
    </span>
  </div>
</div>
`;

exports[`ListItem renders with showDivider 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      With Divider
    </span>
  </div>
</div>
`;

exports[`ListItem renders with string subtitle 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="ListItem/ListItem.tsx:62"
  data-style-src="react-strict-dom:web/runtime.js"
  ref={null}
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="ListItem/ListItem.tsx:76"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      My Item
    </span>
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="Text/Text.tsx:31"
      data-style-src="react-strict-dom:web/runtime.js"
      ref={null}
      style={{}}
    >
      Some subtitle
    </span>
  </div>
</div>
`;
